A fix (bug #5615 type of aggregate function column wrong when using group by).

mysql-test/r/func_group.result:
  test case (bug #5615 type of aggregate function column wrong when using group by)
mysql-test/t/func_group.test:
  test case (bug #5615 type of aggregate function column wrong when using group by)
sql/sql_select.cc:
  A fix (bug #5615 type of aggregate function column wrong when using group by):
    should create a temporary field of the proper type in case of 
    MIN|MAX(field).